fluxcd/02-applications/zigbee2mqtt/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee2mqtt
  labels:
    name: zigbee2mqtt
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/component: mqtt
    gateway.networking.k8s.io/allowed: "true"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
