fluxcd/02-applications/zigbee2mqtt/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: zigbee2mqtt-to-shared-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    apps.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: zigbee2mqtt
  to:
    - group: "gateway.networking.k8s.io"
      kind: Gateway
      name: shared-gateway
